--- a/labs/backend-circuit-breaking/backend-circuit-breaking.ipynb
+++ b/labs/backend-circuit-breaking/backend-circuit-breaking.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "metadata": {}
    },
@@ -46,14 +46,14 @@
     "notebook_path = os.path.abspath(\"\")\n",
     "notebook_name = os.path.basename(globals()['__vsc_ipynb_file__'])\n",
     "\n",
-    "lab_prefix = \"av4\" # used to ensure unique names within Azure\n",
+    "lab_prefix = \"spevo8-\" # used to ensure unique names within Azure\n",
     "mock_disabled = True\n",
-    "mock_webapps = [{\"name\": \"openaimock1\"}] # ensure that the names are not being used within Azure\n",
-    "resource_group = \"lab-ai-gateway\"\n",
+    "mock_webapps = [{\"name\": \"pevo-openaimock1\"}] # ensure that the names are not being used within Azure\n",
+    "resource_group = lab_prefix + \"lab-ai-gateway\"\n",
     "apim_resource_name = lab_prefix + \"-aigw-apim\"\n",
-    "apim_resource_location = \"eastus\"\n",
+    "apim_resource_location = \"swedencentral\"\n",
     "apim_resource_sku = \"Consumption\"\n",
-    "openai_resources = [ {\"name\": lab_prefix + \"-aigw-openai1\", \"location\": \"eastus\"}]\n",
+    "openai_resources = [ {\"name\": lab_prefix + \"-aigw-openai1\", \"location\": \"swedencentral\"}]\n",
     "openai_resource_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
     "openai_model_version = \"0613\"\n",
@@ -72,11 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Azure Resource Group  spevo8-lab-ai-gateway  created ⌚  11:15:35.885639\n"
+     ]
+    }
+   ],
    "source": [
     "resource_group_stdout = ! az group create --name {resource_group} --location {apim_resource_location}\n",
     "if resource_group_stdout.n.startswith(\"ERROR\"):\n",
@@ -96,11 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Azure OpenAI resource created ⌚  11:19:35.543007\n"
+     ]
+    }
+   ],
    "source": [
     "if mock_disabled:\n",
     "    openai_resource_name = openai_resources[0].get(\"name\")\n",
@@ -125,11 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ OpenAI deployment created ⌚  11:23:17.524422\n"
+     ]
+    }
+   ],
    "source": [
     "if mock_disabled:\n",
     "    openai_resource_name = openai_resources[0].get(\"name\")\n",
@@ -154,11 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Azure API Management resource created ⌚  11:24:55.962705\n"
+     ]
+    }
+   ],
    "source": [
     "apim_resource_stdout = ! az apim create -g {resource_group} -n {apim_resource_name} -l {apim_resource_location} \\\n",
     "    --sku-name {apim_resource_sku} --publisher-email noreply@microsoft.com --publisher-name Microsoft --enable-managed-identity\n",
@@ -178,11 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👉🏻 API Gateway URL:  https://spevo8--aigw-apim.azure-api.net\n"
+     ]
+    }
+   ],
    "source": [
     "apim_resource_stdout = ! az apim show -g {resource_group} -n {apim_resource_name}\n",
     "apim_resource = json.loads(apim_resource_stdout.n)\n",
@@ -204,11 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Role assignment created ⌚  11:25:20.752559\n"
+     ]
+    }
+   ],
    "source": [
     "if mock_disabled:\n",
     "    openai_resource_name = openai_resources[0].get(\"name\")\n",
@@ -237,11 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👉🏻 Azure OpenAI endpoint:  https://spevo8--aigw-openai1.openai.azure.com/\n",
+      "✅ Backend  spevo8--aigw-openai1  created ⌚  11:25:34.467780\n"
+     ]
+    }
+   ],
    "source": [
     "if mock_disabled:\n",
     "    openai_resource_name = openai_resources[0].get(\"name\")\n",
@@ -259,15 +316,15 @@
     "                \"rules\": [\n",
     "                    {\n",
     "                        \"failureCondition\": {\n",
-    "                            \"count\": 3,\n",
+    "                            \"count\": 6,\n",
     "                            \"errorReasons\": [\n",
     "                                \"Server errors\"\n",
     "                            ],\n",
     "                            \"interval\": \"PT5M\",\n",
     "                            \"statusCodeRanges\": [\n",
     "                                {\n",
-    "                                \"min\": 429,\n",
-    "                                \"max\": 429\n",
+    "                                \"min\": 400,\n",
+    "                                \"max\": 505\n",
     "                                }\n",
     "                            ]\n",
     "                        },\n",
@@ -337,11 +394,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👉🏻 OpenAI endpoint:  https://spevo8--aigw-openai1.openai.azure.com/\n",
+      "✅ API imported on  11:25:46.091802\n"
+     ]
+    }
+   ],
    "source": [
     "if mock_disabled:\n",
     "    openai_resource_stdout = ! az cognitiveservices account show --name {openai_resource_name} --resource-group {resource_group}\n",
@@ -373,11 +439,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Policy updated ⌚  11:25:53.358542\n"
+     ]
+    }
+   ],
    "source": [
     "if mock_disabled:\n",
     "    backend_id = openai_resources[0].get(\"name\")\n",
@@ -405,11 +479,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status code:  200\n",
+      "headers  {'Content-Type': 'application/json', 'Date': 'Wed, 16 Oct 2024 09:26:02 GMT', 'Access-Control-Allow-Origin': '*', 'Cache-Control': 'no-cache, must-revalidate', 'Content-Encoding': 'gzip', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'apim-request-id': 'a1614dae-a503-4b8b-a9df-326a4534a6b8', 'X-Content-Type-Options': 'nosniff', 'x-ms-region': 'Sweden Central', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '984', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'X-Request-ID': 'cd36601e-33da-42d0-8531-fbc9aba8f23e', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd1289-20240926120455'}\n",
+      "response:  Oh, I'm sorry, I'm only programmed to be sarcastic and unhelpful. I don't have the capability to tell time. I suggest you look at a clock or your phone for that information. Good luck!\n"
+     ]
+    }
+   ],
    "source": [
     "url = apim_resource_gateway_url + \"/openai/deployments/\" + openai_deployment_name + \"/chat/completions?api-version=\" + openai_api_version\n",
     "if mock_disabled:\n",
@@ -425,7 +509,7 @@
     "                \"content\": {\n",
     "                    \"simulation\": {\n",
     "                        \"default\": {\"response_status_code\": 200, \"wait_time_ms\": 0},\n",
-    "                        \"openaimock1.azurewebsites.net\": {\"response_status_code\": 429}\n",
+    "                        \"openaimock1.azurewebsites.net\": {\"response_status_code\": 430}\n",
     "                    }\n",
     "                }\n",
     "            }\n",
@@ -452,11 +536,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh, I'm so glad you asked! Let me drop everything I'm not doing to tell you the time. Nope, never mind. Figure it out yourself.\n"
+     ]
+    }
+   ],
    "source": [
     "from openai import AzureOpenAI\n",
     "if mock_disabled:\n",
@@ -495,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "metadata": {}
    },
@@ -513,7 +605,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
