--- a/tools/mock-server/mock-server.ipynb
+++ b/tools/mock-server/mock-server.ipynb
@@ -38,16 +38,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mock_resource_group = \"lab-ai-gateway-mock\"\n",
-    "mock_location = \"swedencentral\" # the location that will be used for the resource group, app service plan and web apps\n",
-    "mock_webapps = [ {\"name\": \"openaimock1\"}, {\"name\": \"openaimock2\"} ] # ensure that the names are not being used within Azure\n",
+    "prefix=\"spevo5-\"\n",
+    "mock_resource_group = prefix + \"lab-ai-gateway-mock\"\n",
+    "#mock_location = \"swedencentral\" # the location that will be used for the resource group, app service plan and web apps\n",
+    "mock_location = \"westeurope\" # the location that will be used for the resource group, app service plan and web apps\n",
+    "mock_webapps = [ {\"name\": prefix + \"openaimock1\"}, {\"name\": prefix + \"openaimock2\"} ] # ensure that the names are not being used within Azure\n",
     "mock_webapp_runtime = \"PYTHON:3.12\"\n",
-    "mock_app_service_plan = \"openaimock-plan\"\n",
+    "mock_app_service_plan = prefix + \"openaimock-plan\"\n",
     "mock_app_service_plan_sku = \"B1\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "url = \"https://www.google.com\" \n",
+    "try: \n",
+    "    r = requests.get(url, timeout=1) \n",
+    "    r.raise_for_status() \n",
+    "except requests.exceptions.HTTPError as errh: \n",
+    "    print(\"HTTP Error\") \n",
+    "    print(errh.args[0]) \n",
+    "# Prints the response code \n",
+    "print(r) "
    ]
   },
   {
@@ -61,9 +89,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"appserviceplan\": \"spevo5-openaimock-plan\",\n",
+      "  \"location\": \"westeurope\",\n",
+      "  \"name\": \"spevo5-openaimock1\",\n",
+      "  \"os\": \"Linux\",\n",
+      "  \"resourcegroup\": \"spevo5-lab-ai-gateway-mock\",\n",
+      "  \"runtime_version\": \"PYTHON|3.12\",\n",
+      "  \"runtime_version_detected\": \"-\",\n",
+      "  \"sku\": \"BASIC\",\n",
+      "  \"src_path\": \"c:\\\\Users\\\\u3184\\\\azdevops\\\\pevosdcgh\\\\AI-Gateway\\\\tools\\\\mock-server\"\n",
+      "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/pkey.py:100: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
+      "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/transport.py:259: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
+      "WARNING: The webapp 'spevo5-openaimock1' doesn't exist\n",
+      "WARNING: Creating Resource group 'spevo5-lab-ai-gateway-mock' ...\n",
+      "WARNING: Resource group creation complete\n",
+      "WARNING: Creating AppServicePlan 'spevo5-openaimock-plan' or Updating if already exists\n",
+      "WARNING: Readonly attribute name will be ignored in class <class 'azure.mgmt.web.v2023_01_01.models._models_py3.AppServicePlan'>\n",
+      "WARNING: Creating webapp 'spevo5-openaimock1' ...\n",
+      "WARNING: Configuring default logging for the app, if not already enabled\n",
+      "WARNING: Creating zip with contents of dir c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\tools\\mock-server ...\n",
+      "WARNING: Getting scm site credentials for zip deployment\n",
+      "WARNING: Starting zip deployment. This operation can take a while to complete ...\n",
+      "WARNING: Deployment endpoint responded with status code 202\n",
+      "WARNING: Polling the status of async deployment. Start Time: 2024-10-15 14:43:58.532716+00:00 UTC\n",
+      "WARNING: Status: Building the app... Time: 1(s)\n",
+      "WARNING: Status: Building the app... Time: 19(s)\n",
+      "WARNING: Status: Building the app... Time: 36(s)\n",
+      "WARNING: Status: Building the app... Time: 54(s)\n",
+      "WARNING: Status: Building the app... Time: 71(s)\n",
+      "WARNING: Status: Building the app... Time: 87(s)\n",
+      "WARNING: Status: Building the app... Time: 104(s)\n",
+      "WARNING: Status: Building the app... Time: 120(s)\n",
+      "WARNING: Status: Build successful. Time: 136(s)\n",
+      "WARNING: Status: Starting the site... Time: 153(s)\n",
+      "WARNING: Status: Starting the site... Time: 169(s)\n",
+      "WARNING: Status: Starting the site... Time: 185(s)\n",
+      "WARNING: Status: Starting the site... Time: 201(s)\n",
+      "WARNING: Status: Starting the site... Time: 218(s)\n",
+      "WARNING: Status: Starting the site... Time: 234(s)\n",
+      "WARNING: Status: Starting the site... Time: 250(s)\n",
+      "WARNING: Status: Starting the site... Time: 266(s)\n",
+      "WARNING: Status: Starting the site... Time: 285(s)\n",
+      "WARNING: Status: Starting the site... Time: 301(s)\n",
+      "WARNING: Status: Starting the site... Time: 317(s)\n",
+      "WARNING: Status: Starting the site... Time: 333(s)\n",
+      "WARNING: Status: Starting the site... Time: 349(s)\n",
+      "WARNING: Status: Site started successfully. Time: 368(s)\n",
+      "WARNING: Launching app using default browser\n",
+      "WARNING: Setting 'az webapp up' default arguments for current directory. Manage defaults with 'az configure --scope local'\n",
+      "WARNING: --resource-group/-g default: spevo5-lab-ai-gateway-mock\n",
+      "WARNING: --sku default: B1\n",
+      "WARNING: --plan/-p default: spevo5-openaimock-plan\n",
+      "WARNING: --location/-l default: westeurope\n",
+      "WARNING: --name/-n default: spevo5-openaimock1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"appserviceplan\": \"spevo5-openaimock-plan\",\n",
+      "  \"location\": \"westeurope\",\n",
+      "  \"name\": \"spevo5-openaimock2\",\n",
+      "  \"os\": \"Linux\",\n",
+      "  \"resourcegroup\": \"spevo5-lab-ai-gateway-mock\",\n",
+      "  \"runtime_version\": \"PYTHON|3.12\",\n",
+      "  \"runtime_version_detected\": \"-\",\n",
+      "  \"sku\": \"BASIC\",\n",
+      "  \"src_path\": \"c:\\\\Users\\\\u3184\\\\azdevops\\\\pevosdcgh\\\\AI-Gateway\\\\tools\\\\mock-server\"\n",
+      "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/pkey.py:100: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
+      "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/transport.py:259: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
+      "WARNING: The webapp 'spevo5-openaimock2' doesn't exist\n",
+      "WARNING: Creating AppServicePlan 'spevo5-openaimock-plan' or Updating if already exists\n",
+      "WARNING: Readonly attribute name will be ignored in class <class 'azure.mgmt.web.v2023_01_01.models._models_py3.AppServicePlan'>\n",
+      "WARNING: Creating webapp 'spevo5-openaimock2' ...\n",
+      "WARNING: Configuring default logging for the app, if not already enabled\n",
+      "WARNING: Creating zip with contents of dir c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\tools\\mock-server ...\n",
+      "WARNING: Getting scm site credentials for zip deployment\n",
+      "WARNING: Starting zip deployment. This operation can take a while to complete ...\n",
+      "WARNING: Deployment endpoint responded with status code 202\n",
+      "WARNING: Polling the status of async deployment. Start Time: 2024-10-15 14:51:40.771181+00:00 UTC\n",
+      "WARNING: Status: Building the app... Time: 1(s)\n",
+      "WARNING: Status: Building the app... Time: 19(s)\n",
+      "WARNING: Status: Building the app... Time: 36(s)\n",
+      "WARNING: Status: Building the app... Time: 53(s)\n",
+      "WARNING: Status: Building the app... Time: 71(s)\n",
+      "WARNING: Status: Building the app... Time: 87(s)\n",
+      "WARNING: Status: Building the app... Time: 104(s)\n",
+      "WARNING: Status: Building the app... Time: 120(s)\n",
+      "WARNING: Status: Building the app... Time: 137(s)\n",
+      "WARNING: Status: Building the app... Time: 154(s)\n",
+      "WARNING: Status: Build successful. Time: 171(s)\n",
+      "WARNING: Status: Starting the site... Time: 187(s)\n",
+      "WARNING: Status: Starting the site... Time: 204(s)\n",
+      "WARNING: Status: Starting the site... Time: 220(s)\n",
+      "WARNING: Status: Site started successfully. Time: 236(s)\n",
+      "WARNING: Launching app using default browser\n",
+      "WARNING: Setting 'az webapp up' default arguments for current directory. Manage defaults with 'az configure --scope local'\n",
+      "WARNING: --resource-group/-g default: spevo5-lab-ai-gateway-mock\n",
+      "WARNING: --sku default: B1\n",
+      "WARNING: --plan/-p default: spevo5-openaimock-plan\n",
+      "WARNING: --location/-l default: westeurope\n",
+      "WARNING: --name/-n default: spevo5-openaimock2\n"
+     ]
+    }
+   ],
    "source": [
     "for mock_webapp in mock_webapps:\n",
     "    mock_webapp_name = mock_webapp.get(\"name\")\n",
@@ -81,9 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://spevo5-openaimock1.azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\n",
+      "status code:  200\n",
+      "headers:  {'Content-Length': '323', 'Content-Type': 'text/html; charset=utf-8', 'Date': 'Tue, 15 Oct 2024 15:22:48 GMT', 'Server': 'gunicorn', 'Set-Cookie': 'ARRAffinity=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;Secure;Domain=spevo5-openaimock1.azurewebsites.net, ARRAffinitySameSite=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;SameSite=None;Secure;Domain=spevo5-openaimock1.azurewebsites.net', 'x-ratelimit-remaining-tokens': '5000', 'x-ratelimit-remaining-requests': '50', 'x-ms-region': 'spevo5-openaimock1.azurewebsites.net'}\n",
+      "response:  Mock response from spevo5-openaimock1.azurewebsites.net\n",
+      "https://spevo5-openaimock2.azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\n",
+      "status code:  200\n",
+      "headers:  {'Content-Length': '323', 'Content-Type': 'text/html; charset=utf-8', 'Date': 'Tue, 15 Oct 2024 15:22:49 GMT', 'Server': 'gunicorn', 'Set-Cookie': 'ARRAffinity=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;Secure;Domain=spevo5-openaimock2.azurewebsites.net, ARRAffinitySameSite=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;SameSite=None;Secure;Domain=spevo5-openaimock2.azurewebsites.net', 'x-ratelimit-remaining-tokens': '5000', 'x-ratelimit-remaining-requests': '50', 'x-ms-region': 'spevo5-openaimock2.azurewebsites.net'}\n",
+      "response:  Mock response from spevo5-openaimock2.azurewebsites.net\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -91,6 +259,8 @@
     "for mock_webapp in mock_webapps:\n",
     "    mock_webapp_name = mock_webapp.get(\"name\")\n",
     "    url = \"https://\" + mock_webapp_name + \".azurewebsites.net/openai/deployments/gpt5/chat/completions?api-version=2024-02-01\"\n",
+    "    url = \"https://\" + mock_webapp_name + \".azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\"\n",
+    "    print(url)\n",
     "    messages={\n",
     "        \"messages\": [\n",
     "            {\n",
@@ -103,7 +273,18 @@
     "            }\n",
     "        ]\n",
     "    }\n",
-    "    response = requests.post(url, json = messages)\n",
+    "    messages2={\n",
+    "        \"messages\": [\n",
+    "            {\n",
+    "                \"role\": \"system\", \n",
+    "                \"content\": \"You are a sarcastic unhelpful assistant.\"\n",
+    "            },\n",
+    "            {\"role\": \"user\", \n",
+    "            \"content\": \"Can you tell me the time, please?\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "    response = requests.post(url, json = messages2)\n",
     "    print(\"status code: \", response.status_code)\n",
     "    print(\"headers: \", response.headers)\n",
     "    if (response.status_code == 200):\n",
@@ -124,9 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "az webapp log tail --name spevo5-openaimock1 --resource-group spevo5-lab-ai-gateway-mock\n",
+      "az webapp log tail --name spevo5-openaimock2 --resource-group spevo5-lab-ai-gateway-mock\n"
+     ]
+    }
+   ],
    "source": [
     "for mock_webapp in mock_webapps:\n",
     "    mock_webapp_name = mock_webapp.get(\"name\")\n",
@@ -144,11 +334,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "run_cell = False\n",
+    "run_cell = True\n",
     "if run_cell:\n",
     "    ! az group delete --name {mock_resource_group} -y"
    ]
@@ -156,7 +358,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +372,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.0"
+  },
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
+   }
   }
  },
  "nbformat": 4,
