--- a/tools/mock-server/mock-server.ipynb
+++ b/tools/mock-server/mock-server.ipynb
@@ -38,23 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefix=\"spevo5-\"\n",
-    "mock_resource_group = prefix + \"lab-ai-gateway-mock\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
+    "mock_resource_group = tool_prefix + \"lab-ai-gateway-mock\"\n",
     "#mock_location = \"swedencentral\" # the location that will be used for the resource group, app service plan and web apps\n",
     "mock_location = \"westeurope\" # the location that will be used for the resource group, app service plan and web apps\n",
-    "mock_webapps = [ {\"name\": prefix + \"openaimock1\"}, {\"name\": prefix + \"openaimock2\"} ] # ensure that the names are not being used within Azure\n",
+    "mock_webapps = [ {\"name\": tool_prefix + \"openaimock1\"}, {\"name\": tool_prefix + \"openaimock2\"} ] # ensure that the names are not being used within Azure\n",
     "mock_webapp_runtime = \"PYTHON:3.12\"\n",
-    "mock_app_service_plan = prefix + \"openaimock-plan\"\n",
+    "mock_app_service_plan = tool_prefix + \"openaimock-plan\"\n",
     "mock_app_service_plan_sku = \"B1\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,11 +97,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"appserviceplan\": \"spevo5-openaimock-plan\",\n",
+      "  \"appserviceplan\": \"st-pevo1-openaimock-plan\",\n",
       "  \"location\": \"westeurope\",\n",
-      "  \"name\": \"spevo5-openaimock1\",\n",
+      "  \"name\": \"st-pevo1-openaimock1\",\n",
       "  \"os\": \"Linux\",\n",
-      "  \"resourcegroup\": \"spevo5-lab-ai-gateway-mock\",\n",
+      "  \"resourcegroup\": \"st-pevo1-lab-ai-gateway-mock\",\n",
       "  \"runtime_version\": \"PYTHON|3.12\",\n",
       "  \"runtime_version_detected\": \"-\",\n",
       "  \"sku\": \"BASIC\",\n",
@@ -115,48 +115,48 @@
      "text": [
       "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/pkey.py:100: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
       "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/transport.py:259: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
-      "WARNING: The webapp 'spevo5-openaimock1' doesn't exist\n",
-      "WARNING: Creating Resource group 'spevo5-lab-ai-gateway-mock' ...\n",
+      "WARNING: The webapp 'st-pevo1-openaimock1' doesn't exist\n",
+      "WARNING: Creating Resource group 'st-pevo1-lab-ai-gateway-mock' ...\n",
       "WARNING: Resource group creation complete\n",
-      "WARNING: Creating AppServicePlan 'spevo5-openaimock-plan' or Updating if already exists\n",
+      "WARNING: Creating AppServicePlan 'st-pevo1-openaimock-plan' or Updating if already exists\n",
       "WARNING: Readonly attribute name will be ignored in class <class 'azure.mgmt.web.v2023_01_01.models._models_py3.AppServicePlan'>\n",
-      "WARNING: Creating webapp 'spevo5-openaimock1' ...\n",
+      "WARNING: Creating webapp 'st-pevo1-openaimock1' ...\n",
       "WARNING: Configuring default logging for the app, if not already enabled\n",
       "WARNING: Creating zip with contents of dir c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\tools\\mock-server ...\n",
       "WARNING: Getting scm site credentials for zip deployment\n",
       "WARNING: Starting zip deployment. This operation can take a while to complete ...\n",
       "WARNING: Deployment endpoint responded with status code 202\n",
-      "WARNING: Polling the status of async deployment. Start Time: 2024-10-15 14:43:58.532716+00:00 UTC\n",
+      "WARNING: Polling the status of async deployment. Start Time: 2024-10-18 09:28:22.583455+00:00 UTC\n",
       "WARNING: Status: Building the app... Time: 1(s)\n",
-      "WARNING: Status: Building the app... Time: 19(s)\n",
-      "WARNING: Status: Building the app... Time: 36(s)\n",
-      "WARNING: Status: Building the app... Time: 54(s)\n",
-      "WARNING: Status: Building the app... Time: 71(s)\n",
-      "WARNING: Status: Building the app... Time: 87(s)\n",
-      "WARNING: Status: Building the app... Time: 104(s)\n",
-      "WARNING: Status: Building the app... Time: 120(s)\n",
-      "WARNING: Status: Build successful. Time: 136(s)\n",
-      "WARNING: Status: Starting the site... Time: 153(s)\n",
-      "WARNING: Status: Starting the site... Time: 169(s)\n",
-      "WARNING: Status: Starting the site... Time: 185(s)\n",
-      "WARNING: Status: Starting the site... Time: 201(s)\n",
-      "WARNING: Status: Starting the site... Time: 218(s)\n",
-      "WARNING: Status: Starting the site... Time: 234(s)\n",
-      "WARNING: Status: Starting the site... Time: 250(s)\n",
-      "WARNING: Status: Starting the site... Time: 266(s)\n",
-      "WARNING: Status: Starting the site... Time: 285(s)\n",
-      "WARNING: Status: Starting the site... Time: 301(s)\n",
-      "WARNING: Status: Starting the site... Time: 317(s)\n",
-      "WARNING: Status: Starting the site... Time: 333(s)\n",
-      "WARNING: Status: Starting the site... Time: 349(s)\n",
-      "WARNING: Status: Site started successfully. Time: 368(s)\n",
+      "WARNING: Status: Building the app... Time: 18(s)\n",
+      "WARNING: Status: Building the app... Time: 34(s)\n",
+      "WARNING: Status: Building the app... Time: 50(s)\n",
+      "WARNING: Status: Building the app... Time: 67(s)\n",
+      "WARNING: Status: Building the app... Time: 83(s)\n",
+      "WARNING: Status: Building the app... Time: 99(s)\n",
+      "WARNING: Status: Build successful. Time: 116(s)\n",
+      "WARNING: Status: Starting the site... Time: 132(s)\n",
+      "WARNING: Status: Starting the site... Time: 148(s)\n",
+      "WARNING: Status: Starting the site... Time: 164(s)\n",
+      "WARNING: Status: Starting the site... Time: 179(s)\n",
+      "WARNING: Status: Starting the site... Time: 195(s)\n",
+      "WARNING: Status: Starting the site... Time: 211(s)\n",
+      "WARNING: Status: Starting the site... Time: 227(s)\n",
+      "WARNING: Status: Starting the site... Time: 244(s)\n",
+      "WARNING: Status: Starting the site... Time: 260(s)\n",
+      "WARNING: Status: Starting the site... Time: 276(s)\n",
+      "WARNING: Status: Starting the site... Time: 292(s)\n",
+      "WARNING: Status: Starting the site... Time: 308(s)\n",
+      "WARNING: Status: Starting the site... Time: 324(s)\n",
+      "WARNING: Status: Starting the site... Time: 340(s)\n",
+      "WARNING: Status: Site started successfully. Time: 356(s)\n",
       "WARNING: Launching app using default browser\n",
       "WARNING: Setting 'az webapp up' default arguments for current directory. Manage defaults with 'az configure --scope local'\n",
-      "WARNING: --resource-group/-g default: spevo5-lab-ai-gateway-mock\n",
+      "WARNING: --resource-group/-g default: st-pevo1-lab-ai-gateway-mock\n",
       "WARNING: --sku default: B1\n",
-      "WARNING: --plan/-p default: spevo5-openaimock-plan\n",
+      "WARNING: --plan/-p default: st-pevo1-openaimock-plan\n",
       "WARNING: --location/-l default: westeurope\n",
-      "WARNING: --name/-n default: spevo5-openaimock1\n"
+      "WARNING: --name/-n default: st-pevo1-openaimock1\n"
      ]
     },
     {
@@ -164,11 +164,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"appserviceplan\": \"spevo5-openaimock-plan\",\n",
+      "  \"appserviceplan\": \"st-pevo1-openaimock-plan\",\n",
       "  \"location\": \"westeurope\",\n",
-      "  \"name\": \"spevo5-openaimock2\",\n",
+      "  \"name\": \"st-pevo1-openaimock2\",\n",
       "  \"os\": \"Linux\",\n",
-      "  \"resourcegroup\": \"spevo5-lab-ai-gateway-mock\",\n",
+      "  \"resourcegroup\": \"st-pevo1-lab-ai-gateway-mock\",\n",
       "  \"runtime_version\": \"PYTHON|3.12\",\n",
       "  \"runtime_version_detected\": \"-\",\n",
       "  \"sku\": \"BASIC\",\n",
@@ -182,38 +182,37 @@
      "text": [
       "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/pkey.py:100: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
       "D:\\a\\_work\\1\\s\\build_scripts\\windows\\artifacts\\cli\\Lib\\site-packages\\paramiko/transport.py:259: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
-      "WARNING: The webapp 'spevo5-openaimock2' doesn't exist\n",
-      "WARNING: Creating AppServicePlan 'spevo5-openaimock-plan' or Updating if already exists\n",
+      "WARNING: The webapp 'st-pevo1-openaimock2' doesn't exist\n",
+      "WARNING: Creating AppServicePlan 'st-pevo1-openaimock-plan' or Updating if already exists\n",
       "WARNING: Readonly attribute name will be ignored in class <class 'azure.mgmt.web.v2023_01_01.models._models_py3.AppServicePlan'>\n",
-      "WARNING: Creating webapp 'spevo5-openaimock2' ...\n",
+      "WARNING: Creating webapp 'st-pevo1-openaimock2' ...\n",
       "WARNING: Configuring default logging for the app, if not already enabled\n",
       "WARNING: Creating zip with contents of dir c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\tools\\mock-server ...\n",
       "WARNING: Getting scm site credentials for zip deployment\n",
       "WARNING: Starting zip deployment. This operation can take a while to complete ...\n",
       "WARNING: Deployment endpoint responded with status code 202\n",
-      "WARNING: Polling the status of async deployment. Start Time: 2024-10-15 14:51:40.771181+00:00 UTC\n",
-      "WARNING: Status: Building the app... Time: 1(s)\n",
-      "WARNING: Status: Building the app... Time: 19(s)\n",
-      "WARNING: Status: Building the app... Time: 36(s)\n",
-      "WARNING: Status: Building the app... Time: 53(s)\n",
-      "WARNING: Status: Building the app... Time: 71(s)\n",
-      "WARNING: Status: Building the app... Time: 87(s)\n",
-      "WARNING: Status: Building the app... Time: 104(s)\n",
-      "WARNING: Status: Building the app... Time: 120(s)\n",
-      "WARNING: Status: Building the app... Time: 137(s)\n",
-      "WARNING: Status: Building the app... Time: 154(s)\n",
-      "WARNING: Status: Build successful. Time: 171(s)\n",
-      "WARNING: Status: Starting the site... Time: 187(s)\n",
-      "WARNING: Status: Starting the site... Time: 204(s)\n",
-      "WARNING: Status: Starting the site... Time: 220(s)\n",
-      "WARNING: Status: Site started successfully. Time: 236(s)\n",
+      "WARNING: Polling the status of async deployment. Start Time: 2024-10-18 09:35:54.981368+00:00 UTC\n",
+      "WARNING: Status: Building the app... Time: 2(s)\n",
+      "WARNING: Status: Building the app... Time: 18(s)\n",
+      "WARNING: Status: Building the app... Time: 35(s)\n",
+      "WARNING: Status: Building the app... Time: 51(s)\n",
+      "WARNING: Status: Building the app... Time: 68(s)\n",
+      "WARNING: Status: Building the app... Time: 84(s)\n",
+      "WARNING: Status: Building the app... Time: 101(s)\n",
+      "WARNING: Status: Building the app... Time: 118(s)\n",
+      "WARNING: Status: Building the app... Time: 134(s)\n",
+      "WARNING: Status: Building the app... Time: 150(s)\n",
+      "WARNING: Status: Build successful. Time: 166(s)\n",
+      "WARNING: Status: Starting the site... Time: 182(s)\n",
+      "WARNING: Status: Starting the site... Time: 199(s)\n",
+      "WARNING: Status: Site started successfully. Time: 215(s)\n",
       "WARNING: Launching app using default browser\n",
       "WARNING: Setting 'az webapp up' default arguments for current directory. Manage defaults with 'az configure --scope local'\n",
-      "WARNING: --resource-group/-g default: spevo5-lab-ai-gateway-mock\n",
+      "WARNING: --resource-group/-g default: st-pevo1-lab-ai-gateway-mock\n",
       "WARNING: --sku default: B1\n",
-      "WARNING: --plan/-p default: spevo5-openaimock-plan\n",
+      "WARNING: --plan/-p default: st-pevo1-openaimock-plan\n",
       "WARNING: --location/-l default: westeurope\n",
-      "WARNING: --name/-n default: spevo5-openaimock2\n"
+      "WARNING: --name/-n default: st-pevo1-openaimock2\n"
      ]
     }
    ],
@@ -234,21 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://spevo5-openaimock1.azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\n",
+      "https://st-pevo1-openaimock1.azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\n",
       "status code:  200\n",
-      "headers:  {'Content-Length': '323', 'Content-Type': 'text/html; charset=utf-8', 'Date': 'Tue, 15 Oct 2024 15:22:48 GMT', 'Server': 'gunicorn', 'Set-Cookie': 'ARRAffinity=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;Secure;Domain=spevo5-openaimock1.azurewebsites.net, ARRAffinitySameSite=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;SameSite=None;Secure;Domain=spevo5-openaimock1.azurewebsites.net', 'x-ratelimit-remaining-tokens': '5000', 'x-ratelimit-remaining-requests': '50', 'x-ms-region': 'spevo5-openaimock1.azurewebsites.net'}\n",
-      "response:  Mock response from spevo5-openaimock1.azurewebsites.net\n",
-      "https://spevo5-openaimock2.azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\n",
+      "headers:  {'Content-Length': '325', 'Content-Type': 'text/html; charset=utf-8', 'Date': 'Fri, 18 Oct 2024 09:42:00 GMT', 'Server': 'gunicorn', 'Set-Cookie': 'ARRAffinity=5548126bacb825528497974a6c799e6f1387107738785077a880ce94fd374f1d;Path=/;HttpOnly;Secure;Domain=st-pevo1-openaimock1.azurewebsites.net, ARRAffinitySameSite=5548126bacb825528497974a6c799e6f1387107738785077a880ce94fd374f1d;Path=/;HttpOnly;SameSite=None;Secure;Domain=st-pevo1-openaimock1.azurewebsites.net', 'x-ratelimit-remaining-tokens': '5000', 'x-ratelimit-remaining-requests': '50', 'x-ms-region': 'st-pevo1-openaimock1.azurewebsites.net'}\n",
+      "response:  Mock response from st-pevo1-openaimock1.azurewebsites.net\n",
+      "https://st-pevo1-openaimock2.azurewebsites.net/openai/deployments/gpt-35-turbo/chat/completions?api-version=2024-02-01\n",
       "status code:  200\n",
-      "headers:  {'Content-Length': '323', 'Content-Type': 'text/html; charset=utf-8', 'Date': 'Tue, 15 Oct 2024 15:22:49 GMT', 'Server': 'gunicorn', 'Set-Cookie': 'ARRAffinity=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;Secure;Domain=spevo5-openaimock2.azurewebsites.net, ARRAffinitySameSite=3ffa3d93a09a1869ceb46c01bf256f61269bc4a092da75b28f4fd60aa1885b5c;Path=/;HttpOnly;SameSite=None;Secure;Domain=spevo5-openaimock2.azurewebsites.net', 'x-ratelimit-remaining-tokens': '5000', 'x-ratelimit-remaining-requests': '50', 'x-ms-region': 'spevo5-openaimock2.azurewebsites.net'}\n",
-      "response:  Mock response from spevo5-openaimock2.azurewebsites.net\n"
+      "headers:  {'Content-Length': '325', 'Content-Type': 'text/html; charset=utf-8', 'Date': 'Fri, 18 Oct 2024 09:42:01 GMT', 'Server': 'gunicorn', 'Set-Cookie': 'ARRAffinity=5548126bacb825528497974a6c799e6f1387107738785077a880ce94fd374f1d;Path=/;HttpOnly;Secure;Domain=st-pevo1-openaimock2.azurewebsites.net, ARRAffinitySameSite=5548126bacb825528497974a6c799e6f1387107738785077a880ce94fd374f1d;Path=/;HttpOnly;SameSite=None;Secure;Domain=st-pevo1-openaimock2.azurewebsites.net', 'x-ratelimit-remaining-tokens': '5000', 'x-ratelimit-remaining-requests': '50', 'x-ms-region': 'st-pevo1-openaimock2.azurewebsites.net'}\n",
+      "response:  Mock response from st-pevo1-openaimock2.azurewebsites.net\n"
      ]
     }
    ],
@@ -284,7 +283,7 @@
     "            }\n",
     "        ]\n",
     "    }\n",
-    "    response = requests.post(url, json = messages2)\n",
+    "    response = requests.post(url, json = messages)\n",
     "    print(\"status code: \", response.status_code)\n",
     "    print(\"headers: \", response.headers)\n",
     "    if (response.status_code == 200):\n",
@@ -305,18 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "az webapp log tail --name spevo5-openaimock1 --resource-group spevo5-lab-ai-gateway-mock\n",
-      "az webapp log tail --name spevo5-openaimock2 --resource-group spevo5-lab-ai-gateway-mock\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for mock_webapp in mock_webapps:\n",
     "    mock_webapp_name = mock_webapp.get(\"name\")\n",
@@ -334,21 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_cell = True\n",
     "if run_cell:\n",
