--- a/labs/access-controlling/clean-up-resources.ipynb
+++ b/labs/access-controlling/clean-up-resources.ipynb
@@ -11,16 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👍🏻  apim-3lhvzug7et6ww  was  deleted  ⌚  14:49:48.926610\n",
+      "👍🏻  apim-3lhvzug7et6ww  was  purged  ⌚  14:51:37.612818\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/apis/openai  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/apis/openai/diagnostics/applicationinsights  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/apis/openai/policies/policy  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/backends/mock-backend-pool  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/backends/openaimock1  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/backends/openaimock2  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/loggers/apim-logger  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/ai-pevo4-lab-access-controlling/providers/Microsoft.ApiManagement/service/apim-3lhvzug7et6ww/subscriptions/openai-subscription  ignored\n",
+      "👍🏻  ai-pevo4-lab-access-controlling  was  deleted  ⌚  14:53:22.262062\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
     "import datetime\n",
     "\n",
+    "lab_prefix=\"ai-pevo4-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\"\n",
+    "resource_group_name = f\"{lab_prefix}lab-{deployment_name}\" # change the name to match your naming style\n",
     "\n",
     "def log(stdout, name, action):\n",
     "    if stdout.n.startswith(\"ERROR\"):\n",
@@ -60,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
