--- a/labs/backend-circuit-breaking/backend-circuit-breaking.ipynb
+++ b/labs/backend-circuit-breaking/backend-circuit-breaking.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "metadata": {}
    },
@@ -46,7 +46,7 @@
     "notebook_path = os.path.abspath(\"\")\n",
     "notebook_name = os.path.basename(globals()['__vsc_ipynb_file__'])\n",
     "\n",
-    "lab_prefix = \"spevo8-\" # used to ensure unique names within Azure\n",
+    "lab_prefix = \"ai-pevo2-\" # used to ensure unique names within Azure\n",
     "mock_disabled = True\n",
     "mock_webapps = [{\"name\": \"pevo-openaimock1\"}] # ensure that the names are not being used within Azure\n",
     "resource_group = lab_prefix + \"lab-ai-gateway\"\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "metadata": {}
    },
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Azure Resource Group  spevo8-lab-ai-gateway  created ⌚  11:15:35.885639\n"
+      "✅ Azure Resource Group  ai-pevo2-lab-ai-gateway  created ⌚  23:49:48.876213\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "metadata": {}
    },
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Azure OpenAI resource created ⌚  11:19:35.543007\n"
+      "✅ Azure OpenAI resource created ⌚  23:50:30.185219\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "metadata": {}
    },
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ OpenAI deployment created ⌚  11:23:17.524422\n"
+      "✅ OpenAI deployment created ⌚  23:51:08.991092\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "metadata": {}
    },
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Azure API Management resource created ⌚  11:24:55.962705\n"
+      "✅ Azure API Management resource created ⌚  23:53:30.336917\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "metadata": {}
    },
@@ -219,7 +219,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "👉🏻 API Gateway URL:  https://spevo8--aigw-apim.azure-api.net\n"
+      "👉🏻 API Gateway URL:  https://ai-pevo2--aigw-apim.azure-api.net\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "metadata": {}
    },
@@ -253,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Role assignment created ⌚  11:25:20.752559\n"
+      "✅ Role assignment created ⌚  23:54:04.566810\n"
      ]
     }
    ],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "metadata": {}
    },
@@ -294,8 +294,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "👉🏻 Azure OpenAI endpoint:  https://spevo8--aigw-openai1.openai.azure.com/\n",
-      "✅ Backend  spevo8--aigw-openai1  created ⌚  11:25:34.467780\n"
+      "👉🏻 Azure OpenAI endpoint:  https://ai-pevo2--aigw-openai1.openai.azure.com/\n",
+      "✅ Backend  ai-pevo2--aigw-openai1  created ⌚  23:54:14.367733\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "metadata": {}
    },
@@ -403,8 +403,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "👉🏻 OpenAI endpoint:  https://spevo8--aigw-openai1.openai.azure.com/\n",
-      "✅ API imported on  11:25:46.091802\n"
+      "👉🏻 OpenAI endpoint:  https://ai-pevo2--aigw-openai1.openai.azure.com/\n",
+      "✅ API imported on  23:54:29.483995\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "metadata": {}
    },
@@ -448,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Policy updated ⌚  11:25:53.358542\n"
+      "✅ Policy updated ⌚  23:54:42.115370\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "metadata": {}
    },
@@ -489,8 +489,8 @@
      "output_type": "stream",
      "text": [
       "status code:  200\n",
-      "headers  {'Content-Type': 'application/json', 'Date': 'Wed, 16 Oct 2024 09:26:02 GMT', 'Access-Control-Allow-Origin': '*', 'Cache-Control': 'no-cache, must-revalidate', 'Content-Encoding': 'gzip', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'apim-request-id': 'a1614dae-a503-4b8b-a9df-326a4534a6b8', 'X-Content-Type-Options': 'nosniff', 'x-ms-region': 'Sweden Central', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '984', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'X-Request-ID': 'cd36601e-33da-42d0-8531-fbc9aba8f23e', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd1289-20240926120455'}\n",
-      "response:  Oh, I'm sorry, I'm only programmed to be sarcastic and unhelpful. I don't have the capability to tell time. I suggest you look at a clock or your phone for that information. Good luck!\n"
+      "headers  {'Content-Type': 'application/json', 'Date': 'Fri, 18 Oct 2024 21:56:56 GMT', 'Access-Control-Allow-Origin': '*', 'Cache-Control': 'no-cache, must-revalidate', 'Content-Encoding': 'gzip', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'apim-request-id': '4379febf-c0b2-4ed6-917f-53f3d172a2aa', 'X-Content-Type-Options': 'nosniff', 'x-ms-region': 'Sweden Central', 'x-ratelimit-remaining-requests': '0', 'x-ratelimit-remaining-tokens': '984', 'x-accel-buffering': 'no', 'x-ms-rai-invoked': 'true', 'X-Request-ID': 'd1573570-d5dc-49a0-9b30-64225b375b4c', 'x-ms-client-request-id': 'Not-Set', 'azureml-model-session': 'd1288-20240926111929'}\n",
+      "response:  Oh, sure! Let me just consult my magical crystal ball for that incredibly difficult task. Oh wait, it's actually much more efficient to just look at a clock. My bad. It's 2:45 PM. You're welcome.\n"
      ]
     }
    ],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "metadata": {}
    },
@@ -545,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oh, I'm so glad you asked! Let me drop everything I'm not doing to tell you the time. Nope, never mind. Figure it out yourself.\n"
+      "Oh, sure, I'll just consult my crystal ball and give you the exact time. Or you can, you know, look at any clock around you.\n"
      ]
     }
    ],
@@ -587,11 +587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[K | Finished ..\u001b[K - Starting ..\u001b[K - Starting .."
+     ]
+    }
+   ],
    "source": [
     "run_cell = True\n",
     "if run_cell:\n",
@@ -619,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
