--- a/labs/built-in-logging/clean-up-resources.ipynb
+++ b/labs/built-in-logging/clean-up-resources.ipynb
@@ -19,8 +19,10 @@
     "import json\n",
     "import datetime\n",
     "\n",
+    "lab_prefix=\"ail-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\"\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
     "\n",
     "def log(stdout, name, action):\n",
     "    if stdout.n.startswith(\"ERROR\"):\n",
@@ -28,7 +30,14 @@
     "    else:\n",
     "        print(\"👍🏻 \", name, \" was \", action, \" ⌚ \", datetime.datetime.now().time())\n",
     "\n",
-    "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json    \n",
+    "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json\n",
+    "exit_code=_exit_code\n",
+    "\n",
+    "if exit_code != 1 :\n",
+    "    print(\"Deployment Error\", exit_code, deployment_name, resource_group_name)\n",
+    "    print(deployment_stdout)\n",
+    "    raise SystemExit(\"Stopping the execution of the cell.\")  \n",
+    "\n",
     "deployment = json.loads(deployment_stdout.n)\n",
     "for resource in deployment.get(\"properties\").get(\"outputResources\"):\n",
     "    resource_id = resource.get(\"id\")\n",
@@ -60,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
